<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluetooth</string>
    <string name="modulename">Device Name:</string>
    <string name="modulepassword">PIN Number:</string>
    <string name="autoanswer">AutoAnswer:</string>
    <string name="autoconnect">AutoConncet:</string>
    <string name="busy_talking">Talking busy,Please try later!</string>
    <string name="busy_loadingphonebook">Loading phonebook,Please try later!</string>
    <string name="busy_scanningdevice">Scaning device,Please try later!</string>
    <string name="matchdevice">Paired devices</string>
    <string name="searchdevice">Available devices</string>
    <string name="LA">A</string>
    <string name="LB">B</string>
    <string name="LC">C</string>
    <string name="LD">D</string>
    <string name="LE">E</string>
    <string name="LF">F</string>
    <string name="LG">G</string>
    <string name="LH">H</string>
    <string name="LI">I</string>
    <string name="LJ">J</string>
    <string name="LK">K</string>
    <string name="LL">L</string>
    <string name="LM">M</string>
    <string name="LN">N</string>
    <string name="LO">O</string>
    <string name="LP">P</string>
    <string name="LQ">Q</string>
    <string name="LR">R</string>
    <string name="LS">S</string>
    <string name="LT">T</string>
    <string name="LU">U</string>
    <string name="LV">V</string>
    <string name="LW">W</string>
    <string name="LX">X</string>
    <string name="LY">Y</string>
    <string name="LZ">Z</string>
    <string name="search">Search</string>
    <string name="bluetooth_device_context_connect">Connection?</string>
    <string name="bluetooth_device_context_disconnect">Disconnect?</string>
</resources>
