<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout android:background="@drawable/keyboardbg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keya" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LA" android:layout_x="23.0px" android:layout_y="14.0px" />"
<TextView android:enabled="false" android:gravity="center" android:id="@id/keyb" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LB" android:layout_x="99.0px" android:layout_y="14.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyc" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LC" android:layout_x="175.0px" android:layout_y="14.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyd" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LD" android:layout_x="251.0px" android:layout_y="14.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keye" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LE" android:layout_x="327.0px" android:layout_y="14.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyf" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LF" android:layout_x="23.0px" android:layout_y="80.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyg" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LG" android:layout_x="99.0px" android:layout_y="80.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyh" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LH" android:layout_x="175.0px" android:layout_y="80.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyi" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LI" android:layout_x="251.0px" android:layout_y="80.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyj" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LJ" android:layout_x="327.0px" android:layout_y="80.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyk" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LK" android:layout_x="23.0px" android:layout_y="146.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyl" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LL" android:layout_x="99.0px" android:layout_y="146.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keym" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LM" android:layout_x="175.0px" android:layout_y="146.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyn" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LN" android:layout_x="251.0px" android:layout_y="146.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyo" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LO" android:layout_x="327.0px" android:layout_y="146.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyp" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LP" android:layout_x="23.0px" android:layout_y="212.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyq" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LQ" android:layout_x="99.0px" android:layout_y="212.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyr" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LR" android:layout_x="175.0px" android:layout_y="212.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keys" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LS" android:layout_x="251.0px" android:layout_y="212.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyt" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LT" android:layout_x="327.0px" android:layout_y="212.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyu" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LU" android:layout_x="23.0px" android:layout_y="278.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyv" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LV" android:layout_x="99.0px" android:layout_y="278.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyw" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LW" android:layout_x="175.0px" android:layout_y="278.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyx" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LX" android:layout_x="251.0px" android:layout_y="278.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyy" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LY" android:layout_x="327.0px" android:layout_y="278.0px" />
    <TextView android:enabled="false" android:gravity="center" android:id="@id/keyz" android:background="@drawable/keyboardbtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LZ" android:layout_x="23.0px" android:layout_y="344.0px" />
</AbsoluteLayout>